--- a/game/index.html
+++ b/game/index.html
@@ -34,14 +34,14 @@
 
     <!--  <script type="module" src="main.js"></script>  -->
 
-    <script src="src/constants.js"></script>
-    <script src="src/state-manager.js"></script>
-    <script src="src/game-object.js"></script>
-    <script src="src/barrier.js"></script>
-    <script src="src/player.js"></script>
-    <script src="src/mainmenu.js"></script>
-    <script src="src/hud.js"></script>
-    <script src="src/scene.js"></script>
-    <script src="src/game.js"></script>
+    <script src="game/src/constants.js"></script>
+    <script src="game/src/state-manager.js"></script>
+    <script src="game/src/game-object.js"></script>
+    <script src="game/src/barrier.js"></script>
+    <script src="game/src/player.js"></script>
+    <script src="game/src/mainmenu.js"></script>
+    <script src="game/src/hud.js"></script>
+    <script src="game/src/scene.js"></script>
+    <script src="game/src/game.js"></script>
   </body>
 </html>
